istioctl/cmd/testdata/authz/converter/policy-clusterRbacConfig-inclusion-namespace.yaml
apiVersion: "rbac.istio.io/v1alpha1"
kind: ClusterRbacConfig
metadata:
  name: default
spec:
  mode: 'ON_WITH_INCLUSION'
  inclusion:
    namespaces: ["ns1", "ns2", "ns3"]
---
